alignment fix

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -408,6 +408,10 @@ background-color: cornflowerblue;
 	width: 120px;
   }
 
+  .width-158px {
+	width: 158px;
+  }
+
   .width-165px {
 	width: 165px;
   }
